--- a/src/login.css
+++ b/src/login.css
@@ -136,15 +136,14 @@ h2 {
   font-size: 1em;
   pointer-events: none;
   transition: 0.5s;
+  padding-bottom: 40px;
 }
+
 
 input:focus~label {
   top: -5px;
 }
 
-input:focus~label {
-  top: -5px;
-}
 
 .inputbox input {
   width: 100%;
@@ -223,6 +222,7 @@ button {
 
 .register p a:hover {
   text-decoration: underline;
+  color: #000;
 }
 
 body.day .box {
